# kalshi-bot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  SPEC.md  docker-compose.yml  plan.md  railway.toml
config/: default.yaml
dashboard/: Dockerfile  package-lock.json  package.json
dashboard/src/app/: env-banner.tsx  globals.css  layout.tsx  page.tsx  sidebar-nav.tsx
dashboard/src/app/markets/: page.tsx
dashboard/src/app/markets/[ticker]/: page.tsx
dashboard/src/app/orders/: page.tsx
dashboard/src/app/risk/: page.tsx
dashboard/src/app/settings/: page.tsx
dashboard/src/components/: bot-controls.tsx  env-switcher.tsx  fills-table.tsx  market-card.tsx  orders-table.tsx  pnl-chart.tsx  providers.tsx  risk-events.tsx  settings-form.tsx  status-badge.tsx
dashboard/src/lib/: api.ts  hooks.ts  pnl-utils.test.ts  pnl-utils.ts  types.ts
migrations/: 001_initial.sql  002_phase2.sql  003_pnl_contract.sql
src/: bot_state.rs  config.rs  lib.rs  log_buffer.rs  main.rs  types.rs
src/api/: mod.rs  routes.rs  ws.rs
src/cross_market/: mod.rs
src/db/: mod.rs
src/event_detector/: mod.rs
src/exchange/: auth.rs  mod.rs  models.rs  rate_limiter.rs  rest.rs  websocket.rs
src/execution/: mod.rs
src/fair_value/: mod.rs
src/market_scanner/: mod.rs
src/orderbook/: mod.rs
src/risk/: mod.rs
src/state/: mod.rs
src/strategy/: mod.rs
tasks/: plan.md  todo.md
tests/: execution_tests.rs  fair_value_tests.rs  orderbook_tests.rs  pnl_tests.rs  risk_tests.rs  strategy_tests.rs
