[package]
name = "kalshi-bot"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "kalshi-bot"
path = "src/main.rs"

[lib]
name = "kalshi_bot"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
reqwest = { version = "0.12", features = ["json", "native-tls"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "migrate", "chrono", "rust_decimal", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "2"
dotenvy = "0.15"
futures-util = "0.3"
url = "2"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
